<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_progress"/>

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/title_calendar"/>

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/title_group"/>

    <item
        android:id="@+id/navigation_reward"
        android:icon="@drawable/ic_baseline_storefront_24"
        android:title="@string/title_reward"/>

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_baseline_show_chart_24"
        android:title="@string/title_stats"/>

</menu>