<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_progress">

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.alexanderbukk.bars.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress"/>

    <fragment
        android:id="@+id/navigation_reward"
        android:name="com.alexanderbukk.bars.ui.reward.RewardFragment"
        android:label="@string/title_reward"
        tools:layout="@layout/fragment_reward" />

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.alexanderbukk.bars.ui.group.GroupFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.alexanderbukk.bars.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.alexanderbukk.bars.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />
</navigation>